fixed layout issues

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,10 +1,14 @@
 .header {
   display: flex;
+  position: fixed;
+  width: 100%;
+  background-color: white;
+  top: 0;
   justify-content: center;
   align-items: center;
   padding: 20px 0px;
-  border-bottom: 1px solid black;
   font-family: 'Nunito', sans-serif;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .header a {
   padding: 10px;
